--- a/scss/components/_buttons-toggles.scss
+++ b/scss/components/_buttons-toggles.scss
@@ -41,7 +41,7 @@
 		b {
 				color: var(--blades-white-bright);
 				font-size: 12px;
-				font-family: Kirsty;
+				font-family: var(--font-emphasis);
 				text-transform: uppercase;
 		}
 	}
