--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -58,22 +58,47 @@
 }
 
 @font-face {
-	font-family: "Lekton";
-	src: url("../assets/fonts/Lekton/Lekton.otf") format("opentype");
+	font-family: "Pragmata";
+	src: url("../assets/fonts/Pragmata/Pragmata.otf") format("opentype");
 	font-style: normal;
 	font-weight: normal;
 }
 @font-face {
-	font-family: "Lekton";
-	src: url("../assets/fonts/Lekton/Lekton B.otf") format("opentype");
+	font-family: "Pragmata";
+	src: url("../assets/fonts/Pragmata/Pragmata B.otf") format("opentype");
+	font-style: normal;
 	font-weight: bold;
 }
 @font-face {
-	font-family: "Lekton";
-	src: url("../assets/fonts/Lekton/Lekton i.otf") format("opentype");
+	font-family: "Pragmata";
+	src: url("../assets/fonts/Pragmata/Pragmata i.otf") format("opentype");
 	font-style: italic;
 	font-weight: normal;
 }
+@font-face {
+	font-family: "Pragmata";
+	src: url("../assets/fonts/Pragmata/Pragmata Bi.otf") format("opentype");
+	font-style: italic;
+	font-weight: bold;
+}
+
+// @font-face {
+// 	font-family: "Lekton";
+// 	src: url("../assets/fonts/Lekton/Lekton.otf") format("opentype");
+// 	font-style: normal;
+// 	font-weight: normal;
+// }
+// @font-face {
+// 	font-family: "Lekton";
+// 	src: url("../assets/fonts/Lekton/Lekton B.otf") format("opentype");
+// 	font-weight: bold;
+// }
+// @font-face {
+// 	font-family: "Lekton";
+// 	src: url("../assets/fonts/Lekton/Lekton i.otf") format("opentype");
+// 	font-style: italic;
+// 	font-weight: normal;
+// }
 
 @font-face {
 	font-family: "Minion Pro";
