--- a/scss/import/_character-sheet.scss
+++ b/scss/import/_character-sheet.scss
@@ -1,14 +1,3 @@
-// Colors
-$lightgray: #CCC;
-$gray: #999;
-$red: red;
-$almost_black: #191813;
-// var(--blades-white): #EEEFFF;
-$gold: #DAA520;
-// var(--blades-white-bright): #008000;
-$light_green: #12a012;
-// var(--blades-grey-bright): #04578f;
-
 // Imports
 @import "../core/mixins";
 
@@ -46,7 +35,7 @@ $light_green: #12a012;
 
   .big-teeth-section {
 
-    border-top: 3px solid $almost_black;
+    border-top: 3px solid var(--blades-black);
     display: flex;
     flex-direction: row;
     margin-bottom: 0px;
@@ -149,7 +138,7 @@ $light_green: #12a012;
         width: 100%;
 
         th {
-          background-color: $almost_black;
+          background-color: var(--blades-black);
           color: var(--blades-white);
         }
 
@@ -183,7 +172,7 @@ $light_green: #12a012;
     width: 200px;
 
     .stripe {
-      background-color: $almost_black;
+      background-color: var(--blades-black);
       color: var(--blades-white);
       font-size: 17px;
       padding-left: 5px;
