--- a/scss/import/_original-styles.scss
+++ b/scss/import/_original-styles.scss
@@ -53,7 +53,7 @@
    //      width: 100%;
    //
    //      th {
-   //        background-color: $almost_black;
+   //        background-color: var(--blades-black);
    //        color: var(--blades-white);
    //      }
    //
@@ -87,7 +87,7 @@
    //  width: 200px;
    //
    //  .stripe {
-   //    background-color: $almost_black;
+   //    background-color: var(--blades-black);
    //    color: var(--blades-white);
    //    font-size: 17px;
    //    padding-left: 5px;
@@ -132,7 +132,7 @@
 //  .tooltiptext {
 //    visibility: hidden;
 //    width: 200px;
-//    background-color: $almost_black;
+//    background-color: var(--blades-black);
 //    color: var(--blades-white);
 //    text-align: center;
 //    padding: 5px;
