--- a/scss/import/_tooltip.scss
+++ b/scss/import/_tooltip.scss
@@ -3,7 +3,7 @@
   position: absolute;
   padding: 10px;
   color: var(--blades-white);
-  background-color: $almost_black;
+  background-color: var(--blades-black);
   border: 1px solid #777;
   //box-shadow: 0 1px 3px 1px rgba(0,0,0,0.5);
   border-radius: 3px;
