--- a/scss/sheets/_crew-type-sheet.scss
+++ b/scss/sheets/_crew-type-sheet.scss
@@ -50,7 +50,7 @@
 
 	.crew-type-description {
         position: absolute;
-		font-family: "Ravenscroft";
+		font-family: var(--font-emphasis-alt);
         // background-color: rgba(0, 255, 0, 0.3);
 		color: var(--blades-white);
 		width: calc(100% - 100px - 5px);
