--- a/scss/tinymce/skin/_skin-overrides.scss
+++ b/scss/tinymce/skin/_skin-overrides.scss
@@ -1,4 +1,19 @@
-& {
+.tox-dialog {
+	&.tox-dialog--width-lg {
+		.tox-dialog__header {
+		}
+
+		.tox-dialog__body {
+			.tox-dialog__body-content {
+				.tox-textarea {
+					font-family: var(--font-mono);
+				}
+			}
+		}
+	}
+}
+
+.editor.tinymce {
 	--editor-top-shift: -26px;
 
 	--toolbar-scale-factor: 1; // 0.75;
@@ -13,13 +28,12 @@
 	overflow: visible;
 
 	.tox.tox-tinymce {
-		border: none; // 1px solid #808080;
-		border-radius: 0px;
-		box-shadow: none;
-		box-sizing: border-box;
+		// border: none; // 1px solid #808080;
+		// border-radius: 0px;
+		// box-shadow: none;
+		// box-sizing: border-box;
 		display: flex;
 		flex-direction: column;
-		font-family: Minion Pro;
 		overflow: hidden;
 		position: relative;
 		visibility: inherit !important;
@@ -54,7 +68,7 @@
 								}
 
 								.tox-tbtn__select-label {
-									font-family: Kirsty;
+									font-family: var(--font-emphasis);
 								}
 							}
 						}
@@ -82,7 +96,7 @@
 			.tox-statusbar__text-container {
 
 				.tox-statusbar__path {
-					font-family: Kirsty;
+					font-family: var(--font-emphasis);
 					font-weight: bold;
 					text-transform: uppercase;
 				}
